--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,16 @@
 [package]
-name = "riftd"
+name = "rift"
 version = "0.1.0"
 authors = ["jerluc <jeremyalucas@gmail.com>"]
+
+[[bin]]
+name = "riftd"
+path = "src/bin/main.rs"
 
 [dependencies]
 clap = "2"
 env_logger = "0.3"
 log = "0.3"
 mio = "0.6.1"
+notify = "3.0.0"
 serial = "0.3"
