Creating silly UDS-based socket manager

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ path = "src/bin/main.rs"
 clap = "2"
 env_logger = "0.3"
 log = "0.3"
-mio = "0.6.1"
+mio = "0.6.0"
+mio-uds = "0.6.0"
 notify = "3.0.0"
 serial = "0.3"
+uuid = { version = "0.3.1", features = ["v4"] }
