--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,10 @@ install:
 deploy:
   provider: releases
   api_key: "$GITHUB_TOKEN"
+  file_glob: true
   file:
-    - "target/riftd.linux-amd64"
-    - "target/riftd.linux-arm"
-    # - "target/riftd.darwin-amd64"
+    - "target/*"
   overwrite: true
   skip_cleanup: true
+  on:
+    tags: true
